Add website content generated from `f25c5e430f631a3082fcbf38366066fa34f2060c`

--- a/manual/appenders/delegating.html
+++ b/manual/appenders/delegating.html
@@ -714,21 +714,26 @@ implementation of <code>BlockingQueue</code>.</p>
 </ul>
 </div>
 <div id="_tabs_2_maven--panel" class="tabpanel" aria-labelledby="_tabs_2_maven">
+<div class="paragraph">
+<p>We assume you use <a href="../../components.html#log4j-bom" class="xref page"><code>log4j-bom</code></a> for dependency management.</p>
+</div>
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-xml hljs" data-lang="xml">&lt;dependency&gt;
-  &lt;groupId&gt;com.conversantmedia&lt;/groupId&gt;
-  &lt;artifactId&gt;disruptor&lt;/artifactId&gt;
-  &lt;version&gt;1.2.21&lt;/version&gt;
+  &lt;groupId&gt;org.apache.logging.log4j&lt;/groupId&gt;
+  &lt;artifactId&gt;log4j-conversant&lt;/artifactId&gt;
   &lt;scope&gt;runtime&lt;/scope&gt;
 &lt;/dependency&gt;</code></pre>
 </div>
 </div>
 </div>
 <div id="_tabs_2_gradle--panel" class="tabpanel" aria-labelledby="_tabs_2_gradle">
+<div class="paragraph">
+<p>We assume you use <a href="../../components.html#log4j-bom" class="xref page"><code>log4j-bom</code></a> for dependency management.</p>
+</div>
 <div class="listingblock">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-groovy hljs" data-lang="groovy">runtimeOnly 'com.conversantmedia:disruptor:1.2.21'</code></pre>
+<pre class="highlightjs highlight"><code class="language-groovy hljs" data-lang="groovy">runtimeOnly 'org.apache.logging.log4j:log4j-conversant'</code></pre>
 </div>
 </div>
 </div>
@@ -737,7 +742,7 @@ implementation of <code>BlockingQueue</code>.</p>
 </div>
 </details>
 <div class="paragraph">
-<p><a href="../../plugin-reference.html#org-apache-logging-log4j_log4j-core_org-apache-logging-log4j-core-async-DisruptorBlockingQueueFactory" class="xref page">&#x1F4D6; Plugin reference for <code>DisruptorBlockingQueue</code></a></p>
+<p><a href="../../plugin-reference.html#org-apache-logging-log4j_log4j-conversant_org-apache-logging-log4j-conversant-DisruptorBlockingQueueFactory" class="xref page">&#x1F4D6; Plugin reference for <code>DisruptorBlockingQueue</code></a></p>
 </div>
 </dd>
 </dl>
