--- a/manual/migration.html
+++ b/manual/migration.html
@@ -373,7 +373,11 @@ This change has the following advantages:</p>
 </thead>
 <tbody>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="appenders/delegating.html#BlockingQueueFactory" class="xref page">Asynchronous appender: JCTools-based queue</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="appenders/delegating.html#DisruptorBlockingQueueFactory" class="xref page">Asynchronous appender: Conversant Disruptor-based queue</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="../components.html#log4j-conversant" class="xref page"><code>log4j-conversant</code></a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="appenders/delegating.html#JCToolsBlockingQueueFactory" class="xref page">Asynchronous appender: JCTools-based queue</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="../components.html#log4j-jctools" class="xref page"><code>log4j-jctools</code></a></p></td>
 </tr>
 <tr>
