--- a/release-notes.html
+++ b/release-notes.html
@@ -320,6 +320,16 @@
 </div>
 </div>
 <div class="sect2">
+<h3 id="release-notes-3-x-x-changed"><a class="anchor" href="#release-notes-3-x-x-changed"></a>Changed</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Move <code>DisruptorBlockingQueue</code> plugin to new <code>log4j-conversant</code> module. (<a href="https://github.com/apache/logging-log4j2/pull/2914">2914</a>)</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
 <h3 id="release-notes-3-x-x-fixed"><a class="anchor" href="#release-notes-3-x-x-fixed"></a>Fixed</h3>
 <div class="ulist">
 <ul>
