Add website content generated from `51e34a3b05540e7815edbce33312139b6e66dac8`

--- a/release-notes.html
+++ b/release-notes.html
@@ -473,6 +473,12 @@
 <p>Fix handling of <code>log4j2.debug</code>. (<a href="https://github.com/apache/logging-log4j2/issues/2703">2703</a>)</p>
 </li>
 <li>
+<p>Reload key &amp; trust stores while reconfiguring network appenders containing a TLS (formerly known as SSL) configuration (<a href="https://issues.apache.org/jira/browse/LOG4J2-2988">LOG4J2-2988</a>, <a href="https://github.com/apache/logging-log4j2/pull/2767">2767</a>)</p>
+</li>
+<li>
+<p>Simplify the <code>SSLContext</code> instantiation for the TLS (formerly known as SSL) configuration (<a href="https://issues.apache.org/jira/browse/LOG4J2-2988">LOG4J2-2988</a>, <a href="https://github.com/apache/logging-log4j2/pull/2767">2767</a>)</p>
+</li>
+<li>
 <p>Fix location requirement for the <code>%F</code> and <code>%file</code> keys in Pattern Layout (<a href="https://github.com/apache/logging-log4j2/issues/2781">2781</a>)</p>
 </li>
 <li>
@@ -515,6 +521,9 @@
 </li>
 <li>
 <p>Remove module log4j-mongodb3, use log4j-mongodb instead, log4j-mongodb4 is deprecated for removal. (<a href="https://github.com/apache/logging-log4j2/pull/2486">2486</a>)</p>
+</li>
+<li>
+<p>Update <code>co.elastic.clients:elasticsearch-java</code> to version <code>8.15.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/2925">2925</a>)</p>
 </li>
 <li>
 <p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.17.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/2719">2719</a>)</p>
@@ -562,7 +571,7 @@
 <p>Update log4j-mongodb4 <code>org.mongodb:*</code> from <code>4.11.1</code> to <code>4.11.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/2409">2409</a>)</p>
 </li>
 <li>
-<p>Update <code>org.mongodb:bson</code> to version <code>5.1.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/2918">2918</a>)</p>
+<p>Update <code>org.mongodb:bson</code> to version <code>4.11.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/2926">2926</a>)</p>
 </li>
 <li>
 <p>Update <code>org.slf4j:slf4j-api</code> to version <code>2.0.16</code> (<a href="https://github.com/apache/logging-log4j2/pull/2829">2829</a>)</p>
