--- a/manual/getting-started.html
+++ b/manual/getting-started.html
@@ -515,7 +515,7 @@ These are all part of the <code>log4j-api</code> module, which you can install a
 <pre class="highlightjs highlight"><code class="language-xml hljs" data-lang="xml">&lt;dependency&gt;
   &lt;groupId&gt;org.apache.logging.log4j&lt;/groupId&gt;
   &lt;artifactId&gt;log4j-api&lt;/artifactId&gt;
-  &lt;version&gt;2.24.0-SNAPSHOT&lt;/version&gt;
+  &lt;version&gt;2.24.0&lt;/version&gt;
 &lt;/dependency&gt;</code></pre>
 </div>
 </div>
@@ -523,7 +523,7 @@ These are all part of the <code>log4j-api</code> module, which you can install a
 <div id="_tabs_2_gradle--panel" class="tabpanel" aria-labelledby="_tabs_2_gradle">
 <div class="listingblock">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-groovy hljs" data-lang="groovy">implementation 'org.apache.logging.log4j:log4j-api:2.24.0-SNAPSHOT'</code></pre>
+<pre class="highlightjs highlight"><code class="language-groovy hljs" data-lang="groovy">implementation 'org.apache.logging.log4j:log4j-api:2.24.0'</code></pre>
 </div>
 </div>
 </div>
