Add website content generated from `07a87c58d454d6eaa882f19c75de83372b9d13af`

--- a/download.html
+++ b/download.html
@@ -429,7 +429,7 @@ Proceed to <a href="release-notes.html" class="xref page">Release Notes</a>.</p>
 <p>All the binary artifacts are available on the Apache Software Foundation
 <a href="https://repository.apache.org/content/repositories/releases/"><code>repository.apache.org</code> Nexus repository</a>.
 Its content is mirrored to the
-<a href="https://repo.maven.apache.org/maven2">Maven Central repository</a>.</p>
+<a href="https://repo.maven.apache.org/maven2/">Maven Central repository</a>.</p>
 </div>
 <div class="paragraph">
 <p>See <a href="components.html" class="xref page">Components</a> for more information on the GAV coordinates of the artifacts.</p>
