--- a/migrate-from-log4j1.html
+++ b/migrate-from-log4j1.html
@@ -358,7 +358,7 @@
 </td>
 <td class="content">
 <div class="paragraph">
-<p><a href="http://logging.apache.org/log4j/1.x">Log4j 1</a> has <a href="https://blogs.apache.org/foundation/entry/apache_logging_services_project_announces">reached End of Life</a> in 2015, and is no longer supported.
+<p><a href="http://logging.apache.org/log4j/1.x">Log4j 1</a> has <a href="https://news.apache.org/foundation/entry/apache_logging_services_project_announces">reached End of Life</a> in 2015, and is no longer supported.
 Vulnerabilities reported after August 2015 against Log4j 1 are not checked and will not be fixed.
 Users should <a href="#">upgrade to Log4j 2</a> to obtain security fixes.</p>
 </div>
