Add website content generated from `9659af1677a701fdb4a52f4e68f1427b5b3b9e23`

--- a/manual/getting-started.html
+++ b/manual/getting-started.html
@@ -1003,7 +1003,7 @@ It serves as the default <code>&lt;logger&gt;</code> configuration.</td>
 </table>
 </div>
 <div class="paragraph">
-<p>Next, you need to you need to configure Log4j for the tests of your application.
+<p>Next, you need to configure Log4j for the tests of your application.
 Please proceed to <a href="#config-test">How do I configure Log4j Core for tests?</a></p>
 </div>
 </div>
