Add website content generated from `45ce7287104d158207207b8006798bd153bc2ee4`

--- a/download.html
+++ b/download.html
@@ -350,12 +350,7 @@
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p>Apache Log4j is distributed under the
-<a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, version 2.0</a>.
-You can find the download links of the official <a href="#source-distribution">source</a> and <a href="#binary-distribution">binary distributions</a> below.</p>
-</div>
-<div class="paragraph">
-<p>See also the <a href="https://logging.apache.org/download.html">Logging Services download page</a> for instruction on how to validate the downloaded files.</p>
+<p>You can manually download all published Log4j distributions, verify them, and see their licensing information by following the instructions in <a href="https://logging.apache.org/download.html">the Download page</a> of <a href="https://logging.apache.org">Logging Services</a>.</p>
 </div>
 <div class="admonitionblock tip">
 <table>
@@ -386,7 +381,7 @@ Proceed to <a href="release-notes.html" class="xref page">Release Notes</a>.</p>
 <h2 id="source-distribution"><a class="anchor" href="#source-distribution"></a>Source distribution</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>You can download the source code of the latest Apache Log4j release using the links below:</p>
+<p>You can download the source code of the latest Log4j release using the links below:</p>
 </div>
 <table class="tableblock frame-all grid-all stretch">
 <caption class="title">Table 1. Source distribution files</caption>
@@ -396,7 +391,7 @@ Proceed to <a href="release-notes.html" class="xref page">Release Notes</a>.</p>
 </colgroup>
 <tbody>
 <tr>
-<th class="tableblock halign-left valign-top"><p class="tableblock">Source distribution archive</p></th>
+<th class="tableblock halign-left valign-top"><p class="tableblock">Sources</p></th>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://downloads.apache.org/logging/log4j/2.24.0/apache-log4j-2.24.0-src.zip">apache-log4j-2.24.0-src.zip</a></p></td>
 </tr>
 <tr>
@@ -408,7 +403,7 @@ Proceed to <a href="release-notes.html" class="xref page">Release Notes</a>.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://downloads.apache.org/logging/log4j/2.24.0/apache-log4j-2.24.0-src.zip.asc">apache-log4j-2.24.0-src.zip.asc</a></p></td>
 </tr>
 <tr>
-<th class="tableblock halign-left valign-top"><p class="tableblock">PGP keys</p></th>
+<th class="tableblock halign-left valign-top"><p class="tableblock">Signing keys</p></th>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://downloads.apache.org/logging/KEYS">KEYS</a></p></td>
 </tr>
 </tbody>
@@ -419,7 +414,7 @@ Proceed to <a href="release-notes.html" class="xref page">Release Notes</a>.</p>
 <h2 id="binary-distribution"><a class="anchor" href="#binary-distribution"></a>Binary distribution</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>A set of binaries of Apache Log4j is available through two main distribution channels:</p>
+<p>A set of binaries of Log4j is available through two main distribution channels:</p>
 </div>
 <div class="dlist">
 <dl>
@@ -448,19 +443,19 @@ Its content is mirrored to the
 </colgroup>
 <tbody>
 <tr>
-<th class="tableblock halign-left valign-top"><p class="tableblock">Source distribution archive</p></th>
+<th class="tableblock halign-left valign-top"><p class="tableblock">Binaries</p></th>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://downloads.apache.org/logging/log4j/2.24.0/apache-log4j-2.24.0-bin.zip">apache-log4j-2.24.0-bin.zip</a></p></td>
 </tr>
 <tr>
 <th class="tableblock halign-left valign-top"><p class="tableblock">Checksum</p></th>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://downloads.apache.org/logging/log4j/2.24.0/apache-log4j-2.24.0-bin.zip.sha512">apache-log4j-2.24.0-src.bin.sha512</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://downloads.apache.org/logging/log4j/2.24.0/apache-log4j-2.24.0-bin.zip.sha512">apache-log4j-2.24.0-bin.zip.sha512</a></p></td>
 </tr>
 <tr>
 <th class="tableblock halign-left valign-top"><p class="tableblock">Signature</p></th>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://downloads.apache.org/logging/log4j/2.24.0/apache-log4j-2.24.0-bin.zip.asc">apache-log4j-2.24.0-src.bin.asc</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://downloads.apache.org/logging/log4j/2.24.0/apache-log4j-2.24.0-bin.zip.asc">apache-log4j-2.24.0-bin.zip.asc</a></p></td>
 </tr>
 <tr>
-<th class="tableblock halign-left valign-top"><p class="tableblock">PGP keys</p></th>
+<th class="tableblock halign-left valign-top"><p class="tableblock">Signing keys</p></th>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://downloads.apache.org/logging/KEYS">KEYS</a></p></td>
 </tr>
 </tbody>
@@ -476,7 +471,7 @@ Its content is mirrored to the
 </td>
 <td class="content">
 <div class="paragraph">
-<p>The authenticity of the Apache Log4j binary release is independently verified by the
+<p>The authenticity of the Log4j binary release is independently verified by the
 <a href="https://github.com/jvm-repo-rebuild/reproducible-central">Reproducible Builds for Maven Central Repository</a>
 project.
 You can check the reproducibility status of the artifacts on their
@@ -492,30 +487,8 @@ You can check the reproducibility status of the artifacts on their
 <h2 id="sbom"><a class="anchor" href="#sbom"></a>Software Bill of Materials (SBOM)</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Each Apache Log4j artifact is accompanied by a Software Bill of Materials in
-<a href="https://cyclonedx.org/">CycloneDX format</a>.
-The SBOMs are published to the ASF Nexus repository with <code>cyclonedx</code> as classifier and <code>xml</code> as type and are also available in the binary distribution archive.</p>
-</div>
-<div class="paragraph">
-<p>See also <a href="https://logging.apache.org/download.html#sbom">Apache Logging Services SBOMs</a>.</p>
-</div>
-<div class="admonitionblock important">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-important" title="Important"></i>
-</td>
-<td class="content">
-<div class="paragraph">
-<p>Since Apache Log4j is a software library, the contents of the SBOMs constitute only a <strong>suggested</strong> list of component versions known to work with Apache Log4j.
-These versions are used by our unit tests.</p>
-</div>
-<div class="paragraph">
-<p>The <strong>effective</strong> list of components included in an application containing Apache Log4j can only be determined by the producer of the application.</p>
-</div>
-</td>
-</tr>
-</table>
+<p>Each Log4j artifact is accompanied by a Software Bill of Materials (SBOM).
+See <a href="https://logging.apache.org/download.html#sbom">the Download page of Logging Services page</a> for details.</p>
 </div>
 </div>
 </div>
