Add website content generated from `887e51a7a8f196470271dfbae9ce111e4d06634e`

--- a/manual/api.html
+++ b/manual/api.html
@@ -214,6 +214,9 @@
     <a class="nav-link" href="../faq.html">F.A.Q.</a>
   </li>
   <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="../migrate-from-log4j2.html">Migrating from Log4j 2</a>
+  </li>
+  <li class="nav-item" data-depth="1">
     <a class="nav-link" href="../migrate-from-logback.html">Migrating from Logback</a>
   </li>
   <li class="nav-item" data-depth="1">
@@ -342,7 +345,7 @@ You can also check out <a href="installation.html" class="xref page">Installatio
 </table>
 </div>
 <div class="paragraph">
-<p>Starting with version <code>2.24.4</code>, Log4j API is embraced as the target logging API for both Log4j 2 and Log4j 3.
+<p>Starting with version <code>2.24.0</code>, Log4j API is embraced as the target logging API for both Log4j 2 and Log4j 3.
 Hence, <strong>Log4j 3 does not contain a Log4j API module</strong>, but instead implements <em>"the"</em> Log4j API developed in Log4j 2 branch.
 This ensures Log4j 2 users can safely migrate to Log4j 3 without any Log4j API compatibility concerns.</p>
 </div>
