--- a/migrate-from-slf4j.html
+++ b/migrate-from-slf4j.html
@@ -214,6 +214,9 @@
     <a class="nav-link" href="faq.html">F.A.Q.</a>
   </li>
   <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="migrate-from-log4j2.html">Migrating from Log4j 2</a>
+  </li>
+  <li class="nav-item" data-depth="1">
     <a class="nav-link" href="migrate-from-logback.html">Migrating from Logback</a>
   </li>
   <li class="nav-item is-current-page" data-depth="1">
