--- a/plugin-reference.html
+++ b/plugin-reference.html
@@ -214,6 +214,9 @@
     <a class="nav-link" href="faq.html">F.A.Q.</a>
   </li>
   <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="migrate-from-log4j2.html">Migrating from Log4j 2</a>
+  </li>
+  <li class="nav-item" data-depth="1">
     <a class="nav-link" href="migrate-from-logback.html">Migrating from Logback</a>
   </li>
   <li class="nav-item" data-depth="1">
@@ -2638,12 +2641,7 @@ This attribute is ignored if <code>immediateFlush</code> is set to <code>true</c
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>Property</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code><a href="#org-apache-logging-log4j_log4j-core_org-apache-logging-log4j-core-config-Property">Property</a>?</code></p></td>
-<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p>A generic list of key/value properties</p>
-</div>
-<div class="paragraph">
-<p>The meaning of these properties depends on the component.</p>
-</div></div></td>
+<td class="tableblock halign-left valign-top"><div class="content"></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"></td>
