Add website content generated from `8069c73c971f67dabcf01a6564ba0f91511be0f5`

--- a/manual/appenders/rolling-file.html
+++ b/manual/appenders/rolling-file.html
@@ -1738,6 +1738,8 @@ algorithm</p></td>
 <dt class="hdlist1"><sup>dep</sup></dt>
 <dd>
 <p>Additional dependencies are required to use these compression algorithms:</p>
+<div class="openblock">
+<div class="content">
 <div id="_tabs_2" class="openblock tabs is-sync is-loading">
 <div class="content">
 <div class="ulist tablist">
@@ -1771,8 +1773,10 @@ algorithm</p></td>
 </div>
 </div>
 </div>
+</div>
+</div>
 <div class="paragraph">
-<p>The <code>.xz</code> and <code>.zst</code> extensions require <strong>additional</strong> Commons Compress dependencies.
+<p>The <code>.xz</code> and <code>.zst</code> extensions require <strong>additional</strong> dependencies.
 See
 <a href="https://commons.apache.org/proper/commons-compress/index.html">Commons Compress documentation</a>
 for more details.</p>
