Add website content generated from `9cede698fd561722d597af369636c148a5004387`

--- a/release-notes.html
+++ b/release-notes.html
@@ -337,6 +337,9 @@
 <div class="ulist">
 <ul>
 <li>
+<p>Switch MongoDB tests to use Docker. (<a href="https://github.com/apache/logging-log4j2/issues/2229">2229</a>)</p>
+</li>
+<li>
 <p>Fix custom thread-context data provider handling in lookups and filters. (<a href="https://github.com/apache/logging-log4j2/issues/2331">2331</a>)</p>
 </li>
 <li>
@@ -438,7 +441,7 @@
 <p>Update <code>org.apache.commons:commons-lang3</code> to version <code>3.16.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2811">2811</a>)</p>
 </li>
 <li>
-<p>Update <code>org.apache.groovy:groovy-bom</code> to version <code>4.0.22</code> (<a href="https://github.com/apache/logging-log4j2/pull/2699">2699</a>)</p>
+<p>Update <code>org.apache.groovy:groovy-bom</code> to version <code>4.0.23</code> (<a href="https://github.com/apache/logging-log4j2/pull/2947">2947</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.logging.log4j:log4j-docgen-maven-plugin</code> to version <code>0.9.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2579">2579</a>)</p>
@@ -516,7 +519,7 @@
 <p>Update <code>org.springframework.cloud:spring-cloud-context</code> to version <code>4.1.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/2733">2733</a>)</p>
 </li>
 <li>
-<p>Update <code>org.springframework:spring-framework-bom</code> to version <code>6.1.12</code> (<a href="https://github.com/apache/logging-log4j2/pull/2842">2842</a>)</p>
+<p>Update <code>org.springframework:spring-framework-bom</code> to version <code>6.1.13</code> (<a href="https://github.com/apache/logging-log4j2/pull/2948">2948</a>)</p>
 </li>
 <li>
 <p>Update <code>org.tukaani:xz</code> to version <code>1.10</code> (<a href="https://github.com/apache/logging-log4j2/pull/2780">2780</a>)</p>
