Add website content generated from `8c4e45dbf033b917c442e0cd1f8f19d42a88820d`

--- a/release-notes.html
+++ b/release-notes.html
@@ -365,6 +365,9 @@
 <div class="ulist">
 <ul>
 <li>
+<p>Switch MongoDB tests to use Docker. (<a href="https://github.com/apache/logging-log4j2/issues/2229">2229</a>)</p>
+</li>
+<li>
 <p>Reload key &amp; trust stores while reconfiguring network appenders containing a TLS (formerly known as SSL) configuration (<a href="https://issues.apache.org/jira/browse/LOG4J2-2988">LOG4J2-2988</a>, <a href="https://github.com/apache/logging-log4j2/pull/2767">2767</a>)</p>
 </li>
 <li>
