--- a/release-notes.html
+++ b/release-notes.html
@@ -361,6 +361,26 @@
 </div>
 </div>
 <div class="sect2">
+<h3 id="release-notes-2-x-x-changed"><a class="anchor" href="#release-notes-2-x-x-changed"></a>Changed</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Rework <code>LoggerRegistry</code> to make it <code>MessageFactory</code>-namespaced. This effectively allows loggers of same name, but different message factory. (<a href="https://github.com/apache/logging-log4j2/pull/2936">2936</a>)</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="release-notes-2-x-x-deprecated"><a class="anchor" href="#release-notes-2-x-x-deprecated"></a>Deprecated</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Deprecate <code>AbstractLogger.checkMessageFactory()</code>, since all created <code>Logger`s are already `MessageFactory</code>-namespaced (<a href="https://github.com/apache/logging-log4j2/pull/2936">2936</a>)</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
 <h3 id="release-notes-2-x-x-fixed"><a class="anchor" href="#release-notes-2-x-x-fixed"></a>Fixed</h3>
 <div class="ulist">
 <ul>
@@ -387,7 +407,13 @@
 <p>Update <code>co.elastic.clients:elasticsearch-java</code> to version <code>8.15.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/2925">2925</a>)</p>
 </li>
 <li>
+<p>Update <code>net.java.dev.jna:jna</code> to version <code>5.15.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2956">2956</a>)</p>
+</li>
+<li>
 <p>Update <code>org.eclipse.platform:org.eclipse.osgi</code> to version <code>3.21.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2940">2940</a>)</p>
+</li>
+<li>
+<p>Update <code>org.slf4j:slf4j-nop</code> to version <code>2.0.16</code> (<a href="https://github.com/apache/logging-log4j2/pull/2955">2955</a>)</p>
 </li>
 </ul>
 </div>
